deploy-maven-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenwebapp-deploy-pod
  labels:
    app: mavenwebapp
  namespace: test-ns
spec:
  revisionHistoryLimit: 2
  minReadySeconds: 30
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: mavenweb-app
  template:
     metadata:
       name: mavenwebapp-pod
       labels:
         app: mavenweb-app
     spec:
        containers:
          - name: mavenweb-container
            image: dockerhandson/maven-web-application:2
            ports:
              - containerPort: 8080
            resources:
              requests:
                cpu: 200m
                memory: 250Mi
              limits:
                cpu: 400m
                memory: 500Mi
            livenessProbe:
              httpGet:
                path: /maven-web-application
                port: 8080
              initialDelaySeconds: 30
              periodSeconds: 10
              timeoutSeconds: 40
            readinessProbe:
              httpGet:
                path: /maven-web-application
                port: 8080
              initialDelaySeconds: 10
              periodSeconds: 10
        terminationGracePeriodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: mavenwebapp-service
  labels:
    test: service
  namespace: test-ns
spec:
  type: NodePort
  selector:
    app: mavenweb-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
