docker_image_pull_test_private.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-private
  labels:
    image: tomcat
    repo: private
  namespace: test-ns
spec:
  imagePullSecrets:
  - name: dockercred
  containers:
  - name: tomcat-container
    image: venkat14489/tomcat:latest
    ports:
      - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: tomcatsvc
  namespace: test-ns
spec:
  type: NodePort
  selector:
     image: tomcat
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30088
