live-readiness_nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-probe
  labels:
    test: probe
  namespace: test-ns
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
      - containerPort: 80
    livenessProbe:
      exec:
        command:
          - cat
          - usr/share/nginx/html/index.html
      initialDelaySeconds: 5
      periodSeconds: 5
      timeoutSeconds: 10
    readinessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
      timeoutSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-probe-svc
spec:
  type: NodePort
  selector:
    test: probe
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30800
