mutli-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-app
  labels:
    app: multi-app
spec:
  containers:
  - name: mavenwebapp
    image: dockerhandson/maven-web-application:1
    ports:
    - containerPort: 8080
  - name: nodeapp
    image: dockerhandson/nodejs-app-mss:2
    ports:
    - containerPort: 9981 

---
apiVersion: v1
kind: Service
metadata:
  name: multiappsvc
spec:
  type: NodePort
  selector:
     app: multi-app
  ports:
    - name: maven-app
      port: 8080
      targetPort: 8080
      nodePort: 30005
    - name: node-app
      port: 9981
      targetPort: 9981
      nodePort: 30006
