nginx_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels: 
    env: test
    app: nginx
  namespace: test-ns
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
       - containerPort: 80
      volumeMounts:
        - name: nginx-map-vol
          mountPath: /usr/share/nginx/html/
  volumes:
    - name: nginx-map-vol
      configMap:
        name: cm-file-dir
      

---
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: test-ns
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: nginx
