python_app_service.yml
apiVersion: v1
kind: Pod
metadata:
  name: python-pod
  labels:
    app: python
  namespace: test-ns
spec:
  containers:
    - name: python-container
      image: dockerhandson/python-flask-app:2
      ports:
       - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: python-service
  labels:
    test: service
  namespace: test-ns
spec:
  type: NodePort
  selector:
    app: python
  ports:
    - port: 8080
      targetPort: 5000
      nodePort: 30080
