python_ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: python-ds-pod
  labels:
    app: python
  namespace: test-ns
spec:
  selector:
    matchLabels:
      app: python-app
  template:
     metadata:
       name: python-pod
       labels:
         app: python-app
     spec:
        tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        containers:
          - name: python-container
            image: dockerhandson/python-flask-app:2
            ports:
              - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: python-service
  labels:
    test: service
  namespace: test-ns
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - port: 8080
      targetPort: 5000
