python_rc.yaml

apiVersion: v1
kind: Service
metadata:
  name: python-service
  labels:
    test: service
  namespace: test-ns
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - port: 8080
      targetPort: 5000
