service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-netpol-svc
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - port:
