spring-statefull-app.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: springapp-deploy
  labels:
    app: spring-app
  namespace: test-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app-pod
  template:
    metadata: 
      name: springapp-pod
      labels:
        app: spring-app-pod
    spec:
      containers:
      - name: springapp-container
        image: dockerhandson/spring-boot-mongo:1
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springapp-service
  labels:
    type: dbservice
  namespace: test-ns
spec:
  type: NodePort
  selector:
    app: spring-app-pod
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30010
