tomcat_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat
  namespace: test-ns
  labels: 
    app: tomcat
spec:
  containers:
  - name: tomcat
    image: tomcat:alpine
    ports:
      - containerPort: 8080
    volumeMounts:
      - name: tomcat-map
        mountPath: /usr/local/tomcat/conf/tomcat-users.xml
        subPath: tomcat-users.xml
      - name: manager-context
        mountPath: /usr/local/tomcat/webapps/manager/META-INF/
  volumes:
  - name: tomcat-map
    configMap:
      name: tomcat-cm
  - name: manager-context-vol
    configMap: 
      name: manager-context
---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: test-ns
spec:
  selector:
    app: tomcat
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
