mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  labels:
    db: mongodv
  namespace: test-ns
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
# network polices only accessed by the spring app
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mongodb-netpol
 namespace: test-ns
spec:
  podSelector:
    matchLabels:
       app: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: spring-app-pod
      ports:
        - protocol: TCP
          port: 27017
