networkpolices-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
   name: nginx-netpols
spec:
  podSelector:
    matchLabels:
      app: javawebapp
  policyTypes:
    - Ingress
  ingress:
    - from:
       - ipBlock:
           cidr: 0.0.0.0/0
       - namespaceSelector:
            matchLabels:
               kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 8080
